@@ -1,3 +1,11 @@
+2017-06-22  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2017-06-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/80918
+	* gfortran.dg/gomp/pr80918.f90: New test.
+
 2017-06-22  Richard Biener  <rguenther@suse.de>
 
 	Backport from mainline
