@@ -1,3 +1,11 @@
+2017-06-22  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2017-06-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/80918
+	* openmp.c (resolve_omp_clauses): Fix a typo.
+
 2017-06-09  Janus Weil  <janus@gcc.gnu.org>
 
 	Backport from trunk
